@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xineramaproto/xineramaproto-1.1.99.1.ebuild,v 1.1 2009/09/19 16:16:56 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xineramaproto/xineramaproto-1.2.ebuild,v 1.1 2009/10/02 15:12:36 scarabeus Exp $
 
 inherit x-modular
 
@@ -11,5 +11,4 @@ IUSE=""
 
 RDEPEND=""
 DEPEND="${RDEPEND}
-!<x11-libs/libXinerama-1.0.99
->=x11-misc/util-macros-1.2"
+	!<x11-libs/libXinerama-1.0.99"
